Bug 299765 - Background shading settings are not applied
Summary: Background shading settings are not applied
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-10 19:39 UTC by Scott
Modified: 2013-08-15 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott 2012-05-10 19:39:17 UTC
When starting Kate, it always applies the default purple as the background shading color for the file list, even though I have different settings in Documents > Background Shading.

Reproducible: Always

Steps to Reproduce:
1. Start Kate.
2. In Settings > Documents > Background Shading, change the colors.
3. Close and restart Kate.
Actual Results:  
When setting the background shading in step 2, it displays the correct colors, but after restarting it has purple as the background color. In the settings it is still showing my custom colors.

Expected Results:  
It should maintain my chosen settings.

This was marked as fixed in bug #264610 (last June), but I believe I am using a very recent version since the latest version of Ubuntu was only just released.

Kate Version 3.8.2
Using KDE Development Platform 4.8.2 (4.8.2)
Comment 1 Dominik Haumann 2013-08-15 14:04:33 UTC
Git commit d2aa47e2858887e41269363e8f9d344f265d8883 by Dominik Haumann.
Committed on 15/08/2013 at 14:04.
Pushed by dhaumann into branch 'master'.

fix: Background shading settings are not applied

FIXED-IN: 4.11.1

M  +2    -0    kate/filetree/katefiletreeplugin.cpp

http://commits.kde.org/kate/d2aa47e2858887e41269363e8f9d344f265d8883
Comment 2 Dominik Haumann 2013-08-15 14:05:00 UTC
Git commit 07d376f6281457dea087b22bbf38f26cbf0a7885 by Dominik Haumann.
Committed on 15/08/2013 at 14:04.
Pushed by dhaumann into branch 'KDE/4.11'.

fix: Background shading settings are not applied

FIXED-IN: 4.11.1

M  +2    -0    kate/filetree/katefiletreeplugin.cpp

http://commits.kde.org/kate/07d376f6281457dea087b22bbf38f26cbf0a7885
Comment 3 Dominik Haumann 2013-08-15 14:07:13 UTC
Git commit d5f7315320180e89ea59986cbdf0aaf17c3c090c by Dominik Haumann.
Committed on 15/08/2013 at 14:04.
Pushed by dhaumann into branch 'KDE/4.10'.

fix: Background shading settings are not applied

FIXED-IN: 4.11.1

M  +2    -0    kate/plugins/filetree/katefiletreeplugin.cpp

http://commits.kde.org/kate/d5f7315320180e89ea59986cbdf0aaf17c3c090c
Comment 4 Dominik Haumann 2013-08-15 14:07:53 UTC
Now also fixed in the KDE 4.10 branch, but distributions won't pick it up anymore, I fear.