fix: Background shading settings are not applied

FIXED-IN: 4.11.1
BUG: 299765